Subida das redes, eks e nginx. Criacao do modulo do s3.

--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -13,7 +13,7 @@ env:
   terragrunt_version: 0.67.10
   tfvars_file_name: deploy.hcl
   # pr_number: ${{ github.event.pull_request.number }}
-  eks_cluster_name: hexburger-eks-cluster
+  eks_cluster_name: snapit-eks-cluster
 
 jobs:
   terraform_apply:
